5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1724_2521.log
== SUBMITION (2019-05-14 22:22:15) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n2)
print(n3)
-- EXECUTION TIME:
0.13849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1724/2521/main.py", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:16) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n2)
print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:26) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n2)
print(n3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:31) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n1)
print(n2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:22:50) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n1)
print(n2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:23:15) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n1)
print(n2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:24:13) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
#while t<n:
#	pi = factorial(t)/
n1 = factorial(n)
n2 = factorial(n)/3
print(n)
print(n1)
print(n2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    n2 = factorial(n)/3
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:34:04) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	a = 1
	b = 0
	s = 1
	while a<t:
		if a%2 != 0:
			s = s*a
			a = a + 1
		else:
			a = a + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    pi = pi + factorial(t)/s
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:34:17) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	a = 1
	b = 0
	s = 1
	while a<t:
		if a%2 != 0:
			s = s*a
			a = a + 1
		else:
			a = a + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    pi = pi + factorial(t)/s
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:36:14) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	a = 1
	b = 0
	s = 1
	while a<=t:
		if a%2 != 0:
			s = s*a
			a = a + 1
		else:
			a = a + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    pi = pi + factorial(t)/s
OverflowError: integer division result too large for a float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:11) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:18) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:21) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:24) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:45:26) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:17) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 1
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
1.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:20) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 1
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
1.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:25) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 1
while t<n:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
1.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:35) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 
while t<n -1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- ERROR:
File "XXXX", line 4
    t = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:43) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n-1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:47) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n-1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:46:59) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n+1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:47:02) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n+1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:47:05) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n+1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:47:08) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n+1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- OUTPUT:
3.1415926536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 22:47:22) 
-- CODE:
from math import*
n = int(input("serie: "))
pi = 0
t = 0
while t<n+1:
	s = 1
	r = 0
	while r<=t:  
		s = s*((2*r)+1)
		r = r + 1
	pi = pi + factorial(t)/s
	t = t + 1
pi = pi*2
print(round(pi, 10))
-- EXECUTION TIME:
2.58996
-- TEST CASE 1:
---- input:
1560
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 2:
---- input:
1000
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
